[tool.poetry]
name = "diego_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "diego_api"}]

[tool.poetry.dependencies]
python = "^3.10"
awast = { git = "https://github.com/dirodriguezm/awast" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"